testsuite/bsc.typechecker/typeclasses/ATFInInstHead.bs.bsc-out.expected
checking package dependencies
compiling ATFInInstHead.bs
Error: "ATFInInstHead.bs", line 19, column 14: (T0156)
  Type function `Elem' cannot be used in an instance head
